--- a/rs/sns/root/BUILD.bazel
+++ b/rs/sns/root/BUILD.bazel
@@ -10,7 +10,7 @@ filegroup(
     srcs = glob(["proto/**"]),
 )
 
-BASE_DEPENDENCIES = [
+DEPENDENCIES = [
     # Keep sorted.
     "//packages/icrc-ledger-types:icrc_ledger_types",
     "//rs/nervous_system/clients",
@@ -19,6 +19,7 @@ BASE_DEPENDENCIES = [
     "//rs/nervous_system/runtime",
     "//rs/rust_canisters/canister_log",
     "//rs/rust_canisters/http_types",
+    "//rs/sns/swap",  # TODO[NNS1-2282]
     "//rs/types/base_types",
     "//rs/types/management_canister_types",
     "@crate_index//:build-info",
@@ -29,14 +30,6 @@ BASE_DEPENDENCIES = [
     "@crate_index//:ic-metrics-encoder",
     "@crate_index//:prost",
     "@crate_index//:serde",
-]
-
-DEPENDENCIES = BASE_DEPENDENCIES + [
-    "//rs/sns/swap",  # TODO[NNS1-2282]
-]
-
-DEPENDENCIES_WITH_TEST_FEATURES = BASE_DEPENDENCIES + [
-    "//rs/sns/swap:swap--test_feature",  # TODO[NNS1-2282]
 ]
 
 MACRO_DEPENDENCIES = [
@@ -73,19 +66,6 @@ rust_library(
     proc_macro_deps = MACRO_DEPENDENCIES,
     version = "0.9.0",
     deps = DEPENDENCIES + [":build_script"],
-)
-
-rust_library(
-    name = "root--test_feature",
-    srcs = glob([
-        "src/**",
-        "gen/**",
-    ]),
-    aliases = ALIASES,
-    crate_name = "ic_sns_root",
-    proc_macro_deps = MACRO_DEPENDENCIES,
-    version = "0.9.0",
-    deps = DEPENDENCIES_WITH_TEST_FEATURES + [":build_script"],
 )
 
 rust_canister(
