--- a/rs/tla_instrumentation/BUILD.bazel
+++ b/rs/tla_instrumentation/BUILD.bazel
@@ -10,6 +10,7 @@ rust_library(
         "@crate_index//:candid",
         "@crate_index//:serde",
         "@crate_index//:sha2",
+        "@crate_index//:uuid",
     ],
 )
 
