Add node_remuneration_type to setupos

--- a/ic-os/setupos/config/config.ini
+++ b/ic-os/setupos/config/config.ini
@@ -1,10 +1,19 @@
 # Network Configuration File
 #
-# Update these settings according to your specific network requirements.
-
+# Update these settings according to your specific network and node requirements.
 
 # ------------------------------
-# IPv6 Settings
+# Node Remuneration Settings (required)
+# ------------------------------
+# Update node_remuneration_type as per your node configuration.
+# Node remunerations should be of the form:
+# node_remuneration_type=typeX or node_remuneration_type=typeX.Y
+# Example:
+# node_remuneration_type=type2.2
+node_remuneration_type=
+
+# ------------------------------
+# IPv6 Settings (required)
 # ------------------------------
 # Update the following IPv6 settings as per your network configuration.
 #
@@ -32,7 +41,7 @@ ipv6_gateway=2a00:fb01:400:200::1
 
 
 # ----------------------------------
-# Domain Name (required with IPv4)
+# Domain Name (only required with IPv4)
 # ----------------------------------
 # Define the domain name for your node. Ensure proper configuration of A and AAAA records for this domain.
 # domain=node1.example.com
