--- a/rs/protobuf/BUILD.bazel
+++ b/rs/protobuf/BUILD.bazel
@@ -22,9 +22,9 @@ rust_library(
     version = "0.9.0",
     deps = [
         # Keep sorted.
+        "@crate_index//:bincode",
         "@crate_index//:candid",
         "@crate_index//:erased-serde",
-        "@crate_index//:hex",
         "@crate_index//:prost",
         "@crate_index//:serde",
         "@crate_index//:serde_json",
@@ -37,6 +37,7 @@ rust_test(
     crate = ":protobuf",
     deps = [
         # Keep sorted.
+        "@crate_index//:hex",
         "@crate_index//:maplit",
     ],
 )
