--- a/rs/protobuf/Cargo.toml
+++ b/rs/protobuf/Cargo.toml
@@ -7,6 +7,7 @@ description.workspace = true
 documentation.workspace = true
 
 [dependencies]
+bincode = { workspace = true }
 candid = { workspace = true }
 erased-serde = "0.3.11"
 prost = { workspace = true }
