--- a/rs/nns/governance/BUILD.bazel
+++ b/rs/nns/governance/BUILD.bazel
@@ -97,7 +97,6 @@ DEPENDENCIES = [
 MACRO_DEPENDENCIES = [
     # Keep sorted.
     "//rs/nervous_system/common/build_metadata",
-    "//rs/tla_instrumentation:proc_macros",
     "@crate_index//:async-trait",
     "@crate_index//:ic-cdk-macros",
     "@crate_index//:rust_decimal_macros",
@@ -131,7 +130,7 @@ DEV_DEPENDENCIES = [
     ],
 })
 
-MACRO_DEV_DEPENDENCIES = []
+MACRO_DEV_DEPENDENCIES = ["//rs/tla_instrumentation:proc_macros"]
 
 ALIASES = {}
 
@@ -170,7 +169,9 @@ rust_library(
     aliases = ALIASES,
     crate_features = test_with_tla(),
     crate_name = "ic_nns_governance",
-    proc_macro_deps = MACRO_DEPENDENCIES,
+    proc_macro_deps = MACRO_DEPENDENCIES + [
+        "//rs/tla_instrumentation:proc_macros",
+    ],
     version = "0.9.0",
     deps = DEPENDENCIES + [
         ":build_script",
