--- a/ic-os/components/ic/ic.json5.template
+++ b/ic-os/components/ic/ic.json5.template
@@ -493,6 +493,7 @@ table ip6 filter {\n\
                 "2602:fb2b:100::/48",
                 "2607:fb58:9005::/48",
                 "2a0b:21c0:4006:100::/56",
+                "fda6:8d22:43e1::/48",
             ],
             ports: [22, 7070, 9091, 9100, 9324, 19531],
             action: 1,
