--- a/rs/crypto/Cargo.toml
+++ b/rs/crypto/Cargo.toml
@@ -40,7 +40,7 @@ ic-registry-client-helpers = { path = "../registry/helpers" }
 ic-registry-keys = { path = "../registry/keys" }
 ic-types = { path = "../types/types" }
 parking_lot = { workspace = true }
-rustls = { workspace = true, features = ["std"] }
+rustls = { workspace = true }
 serde = { workspace = true }
 slog = { workspace = true }
 strum = { workspace = true }
