--- a/Cargo.toml
+++ b/Cargo.toml
@@ -653,7 +653,7 @@ slog-scope = "4.4.0"
 slog-term = "2.9.1"
 socket2 = { version = "0.5.7", features = ["all"] }
 static_assertions = "1.1.0"
-strum = { version = "0.26.2", features = ["derive"] }
+strum = "0.26.2"
 strum_macros = "0.26.2"
 syn = { version = "1.0.109", features = ["fold", "full"] }
 sync_wrapper = "1.0.1"
