chore: duplicate btc header validation to main repo #769 (#1766)
Copies validation from the bitcoin-canister
[repo](https://github.com/dfinity/bitcoin-canister). This is done to
decouple the repos such that, for example, the bitcoin crate can be
updated independently.

---------

Co-authored-by: Tim Gretler <tim.gretler@dfinity.org>
Co-authored-by: IDX GitHub Automation <infra+github-automation@dfinity.org>

--- a/rs/bitcoin/adapter/BUILD.bazel
+++ b/rs/bitcoin/adapter/BUILD.bazel
@@ -7,6 +7,7 @@ DEPENDENCIES = [
     # Keep sorted.
     "//rs/async_utils",
     "//rs/bitcoin/service",
+    "//rs/bitcoin/validation",
     "//rs/config",
     "//rs/monitoring/logger",
     "//rs/monitoring/metrics",
@@ -16,8 +17,6 @@ DEPENDENCIES = [
     "@crate_index//:hashlink",
     "@crate_index//:hex",
     "@crate_index//:http",
-    "@crate_index//:hyper-util",
-    "@crate_index//:ic-btc-validation",
     "@crate_index//:parking_lot",
     "@crate_index//:prometheus",
     "@crate_index//:prost",
@@ -84,6 +83,7 @@ rust_binary(
     deps = DEPENDENCIES + [
         ":adapter",
         "//rs/monitoring/adapter_metrics/server",
+        "@crate_index//:hyper-util",
     ],
 )
 
