--- a/rs/bitcoin/ckbtc/minter/Cargo.toml
+++ b/rs/bitcoin/ckbtc/minter/Cargo.toml
@@ -48,7 +48,7 @@ serde_json = { workspace = true }
 
 [dev-dependencies]
 assert_matches = { workspace = true }
-bitcoin = "0.28.1"
+bitcoin = { workspace = true }
 candid_parser = { workspace = true }
 canister-test = { path = "../../../rust_canisters/canister_test" }
 ic-bitcoin-canister-mock = { path = "../../mock" }
