--- a/Cargo.toml
+++ b/Cargo.toml
@@ -464,12 +464,9 @@ axum = "0.7.7"
 backoff = "0.4"
 base64 = { version = "0.13.1" }
 bincode = "1.3.3"
-<<<<<<< HEAD
-bitcoind = "0.36.0"
-bitcoincore-rpc = { workspace = true }
-=======
 bitcoin = { version = "0.28.2", features = ["default", "use-serde", "rand"] }
->>>>>>> origin/master
+bitcoincore-rpc = "0.19.0"
+bitcoind = "0.36.0"
 # build-info and build-info-build MUST be kept in sync!
 build-info = { git = "https://github.com/dfinity-lab/build-info", rev = "701a696844fba5c87df162fbbc1ccef96f27c9d7" }
 build-info-build = { git = "https://github.com/dfinity-lab/build-info", rev = "701a696844fba5c87df162fbbc1ccef96f27c9d7", default-features = false }
