--- a/rs/bitcoin/kyt/Cargo.toml
+++ b/rs/bitcoin/kyt/Cargo.toml
@@ -11,7 +11,7 @@ name = "ic-btc-kyt-canister"
 path = "src/main.rs"
 
 [dependencies]
-bitcoin = { version = "0.32.2", default-features = false }
+bitcoin = { workspace = true }
 candid = { workspace = true }
 ciborium = { workspace = true }
 futures = { workspace = true }
