--- a/Cargo.toml
+++ b/Cargo.toml
@@ -464,7 +464,7 @@ axum = "0.7.7"
 backoff = "0.4"
 base64 = { version = "0.13.1" }
 bincode = "1.3.3"
-bitcoin = { version = "0.32.3", features = ["default", "use-serde", "rand"] }
+bitcoin = version = "0.32.3"
 bitcoincore-rpc = "0.19.0"
 bitcoind = "0.36.0"
 # build-info and build-info-build MUST be kept in sync!
