--- a/rs/bitcoin/kyt/BUILD.bazel
+++ b/rs/bitcoin/kyt/BUILD.bazel
@@ -13,7 +13,7 @@ rust_library(
     crate_name = "ic_btc_kyt",
     deps = [
         # Keep sorted.
-        "@crate_index//:bitcoin_0_32",
+        "@crate_index//:bitcoin",
         "@crate_index//:candid",
         "@crate_index//:ciborium",
         "@crate_index//:futures",
@@ -29,7 +29,7 @@ rust_test(
     crate = ":btc_kyt_lib",
     deps = [
         # Keep sorted.
-        "@crate_index//:bitcoin_0_32",
+        "@crate_index//:bitcoin",
         "@crate_index//:candid_parser",
         "@crate_index//:ic-btc-interface",
         "@crate_index//:tokio",
@@ -60,7 +60,7 @@ rust_canister(
     deps = [
         # Keep sorted.
         ":btc_kyt_lib",
-        "@crate_index//:bitcoin_0_32",
+        "@crate_index//:bitcoin",
         "@crate_index//:candid",
         "@crate_index//:candid_parser",
         "@crate_index//:futures",
