--- a/rs/rosetta-api/icp/ledger_canister_blocks_synchronizer/Cargo.toml
+++ b/rs/rosetta-api/icp/ledger_canister_blocks_synchronizer/Cargo.toml
@@ -11,17 +11,17 @@ candid = { workspace = true }
 chrono = { workspace = true }
 ciborium = { workspace = true }
 clap = { version = "3.2.25", features = ["derive"] }
-dfn_protobuf = { path = "../../rust_canisters/dfn_protobuf" }
+dfn_protobuf = { path = "../../../rust_canisters/dfn_protobuf" }
 ic-agent = { workspace = true }
-ic-certification = { path = "../../certification" }
-ic-crypto-sha2 = { path = "../../crypto/sha2" }
-ic-ledger-canister-core = { path = "../../ledger_suite/common/ledger_canister_core" }
-ic-ledger-core = { path = "../../ledger_suite/common/ledger_core" }
-ic-ledger-hash-of = { path = "../../../packages/ic-ledger-hash-of" }
-ic-types = { path = "../../types/types" }
-icp-ledger = { path = "../../ledger_suite/icp" }
+ic-certification = { path = "../../../certification" }
+ic-crypto-sha2 = { path = "../../../crypto/sha2" }
+ic-ledger-canister-core = { path = "../../../ledger_suite/common/ledger_canister_core" }
+ic-ledger-core = { path = "../../../ledger_suite/common/ledger_core" }
+ic-ledger-hash-of = { path = "../../../../packages/ic-ledger-hash-of" }
+ic-types = { path = "../../../types/types" }
+icp-ledger = { path = "../../../ledger_suite/icp" }
 leb128 = "0.2.5"
-on_wire = { path = "../../rust_canisters/on_wire" }
+on_wire = { path = "../../../rust_canisters/on_wire" }
 rusqlite = { version = "~0.28.0", features = ["bundled"] }
 serde = { workspace = true }
 tokio = { workspace = true }
