--- a/rs/rosetta-api/icp/ledger_canister_blocks_synchronizer/test_utils/Cargo.toml
+++ b/rs/rosetta-api/icp/ledger_canister_blocks_synchronizer/test_utils/Cargo.toml
@@ -7,12 +7,12 @@ description.workspace = true
 documentation.workspace = true
 
 [dependencies]
-ic-canister-client-sender = { path = "../../../canister_client/sender" }
+ic-canister-client-sender = { path = "../../../../canister_client/sender" }
 ic-cdk = { workspace = true }
 ic-ledger-canister-blocks-synchronizer = { path = "../" }
-ic-ledger-core = { path = "../../../ledger_suite/common/ledger_core" }
-ic-types = { path = "../../../types/types" }
-icp-ledger = { path = "../../../ledger_suite/icp" }
+ic-ledger-core = { path = "../../../../ledger_suite/common/ledger_core" }
+ic-types = { path = "../../../../types/types" }
+icp-ledger = { path = "../../../../ledger_suite/icp" }
 rand = { workspace = true }
 rand_distr = "0.4"
 serde = { workspace = true }
