--- a/rs/ledger_suite/icp/index/Cargo.toml
+++ b/rs/ledger_suite/icp/index/Cargo.toml
@@ -37,6 +37,6 @@ serde_json = { workspace = true }
 candid_parser = { workspace = true }
 ic-icrc1-ledger-sm-tests = { path = "../../tests/sm-tests" }
 ic-ledger-test-utils = { path = "../test_utils" }
-ic-rosetta-test-utils = { path = "../../../rosetta-api/test_utils" }
+ic-rosetta-test-utils = { path = "../../../rosetta-api/icp/test_utils" }
 ic-state-machine-tests = { path = "../../../state_machine_tests" }
 ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
