--- a/rs/ledger_suite/icrc1/index-ng/Cargo.toml
+++ b/rs/ledger_suite/icrc1/index-ng/Cargo.toml
@@ -43,7 +43,7 @@ ic-icrc1-ledger = { path = "../ledger" }
 ic-icrc1-ledger-sm-tests = { path = "../../tests/sm-tests" }
 ic-icrc1-test-utils = { path = "../test_utils" }
 ic-registry-subnet-type = { path = "../../../registry/subnet_type" }
-ic-rosetta-test-utils = { path = "../../../rosetta-api/test_utils" }
+ic-rosetta-test-utils = { path = "../../../rosetta-api/icp/test_utils" }
 ic-state-machine-tests = { path = "../../../state_machine_tests" }
 ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
 proptest = { workspace = true }
