--- a/rs/ledger_suite/tests/sm-tests/Cargo.toml
+++ b/rs/ledger_suite/tests/sm-tests/Cargo.toml
@@ -25,7 +25,7 @@ ic-icrc1-tokens-u64 = { path = "../../icrc1/tokens_u64" }
 ic-ledger-canister-core = { path = "../../common/ledger_canister_core" }
 ic-ledger-core = { path = "../../common/ledger_core" }
 ic-ledger-hash-of = { path = "../../../../packages/ic-ledger-hash-of" }
-ic-rosetta-test-utils = { path = "../../../rosetta-api/test_utils" }
+ic-rosetta-test-utils = { path = "../../../rosetta-api/icp/test_utils" }
 ic-management-canister-types = { path = "../../../types/management_canister_types" }
 ic-state-machine-tests = { path = "../../../state_machine_tests" }
 ic-types = { path = "../../../types/types" }
