--- a/rs/rosetta-api/icp/client/Cargo.toml
+++ b/rs/rosetta-api/icp/client/Cargo.toml
@@ -17,19 +17,19 @@ ic-agent = { workspace = true }
 ic-rosetta-api = { path = "../" }
 num-bigint = { workspace = true }
 reqwest = { workspace = true }
-rosetta-core = { path = "../rosetta_core" }
+rosetta-core = { path = "../../common/rosetta_core" }
 serde = { workspace = true }
 tokio = { workspace = true }
 url = { workspace = true }
-ic-crypto-secp256k1 = { path = "../../crypto/secp256k1" }
-ic-crypto-ed25519 = { path = "../../crypto/ed25519" }
-icp-ledger = { path = "../../ledger_suite/icp" }
-icrc-ledger-types = { path = "../../../packages/icrc-ledger-types" }
-ic-base-types = { path = "../../types/base_types" }
+ic-crypto-secp256k1 = { path = "../../../crypto/secp256k1" }
+ic-crypto-ed25519 = { path = "../../../crypto/ed25519" }
+icp-ledger = { path = "../../../ledger_suite/icp" }
+icrc-ledger-types = { path = "../../../../packages/icrc-ledger-types" }
+ic-base-types = { path = "../../../types/base_types" }
 
 [dev-dependencies]
 ic-icp-rosetta-runner = { path = "../runner" }
-pocket-ic = { path = "../../../packages/pocket-ic" }
+pocket-ic = { path = "../../../../packages/pocket-ic" }
 tempfile = { workspace = true }
-ic-ledger-test-utils = { path = "../../ledger_suite/icp/test_utils" }
+ic-ledger-test-utils = { path = "../../../ledger_suite/icp/test_utils" }
 ic-rosetta-test-utils = { path = "../test_utils" }
