--- a/rs/rosetta-api/icp/runner/Cargo.toml
+++ b/rs/rosetta-api/icp/runner/Cargo.toml
@@ -8,15 +8,15 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 candid = { workspace = true }
-icrc-ledger-types = { path = "../../../packages/icrc-ledger-types" }
+icrc-ledger-types = { path = "../../../../packages/icrc-ledger-types" }
 tempfile = { workspace = true }
 tokio = { workspace = true }
 reqwest = { workspace = true }
 
 [dev-dependencies]
-pocket-ic = { path = "../../../packages/pocket-ic" }
+pocket-ic = { path = "../../../../packages/pocket-ic" }
 reqwest = { workspace = true }
-ic-ledger-test-utils = { path = "../../ledger_suite/icp/test_utils" }
-icp-ledger = { path = "../../ledger_suite/icp" }
+ic-ledger-test-utils = { path = "../../../ledger_suite/icp/test_utils" }
+icp-ledger = { path = "../../../ledger_suite/icp" }
 tempfile = { workspace = true }
 ic-rosetta-test-utils = { path = "../test_utils" }
