--- a/rs/tests/Cargo.toml
+++ b/rs/tests/Cargo.toml
@@ -61,7 +61,7 @@ ic-icrc1-ledger = { path = "../ledger_suite/icrc1/ledger" }
 ic-icrc1-test-utils = { path = "../ledger_suite/icrc1/test_utils" }
 ic-interfaces = { path = "../interfaces" }
 ic-interfaces-registry = { path = "../interfaces/registry" }
-ic-ledger-canister-blocks-synchronizer-test-utils = { path = "../rosetta-api/ledger_canister_blocks_synchronizer/test_utils" }
+ic-ledger-canister-blocks-synchronizer-test-utils = { path = "../rosetta-api/icp/ledger_canister_blocks_synchronizer/test_utils" }
 ic-ledger-core = { path = "../ledger_suite/common/ledger_core" }
 ic-ledger-suite-orchestrator = { path = "../ethereum/ledger-suite-orchestrator" }
 ic-management-canister-types = { path = "../types/management_canister_types" }
@@ -95,8 +95,8 @@ ic-registry-subnet-features = { path = "../registry/subnet_features" }
 ic-registry-subnet-type = { path = "../registry/subnet_type" }
 ic-registry-transport = { path = "../registry/transport" }
 ic-replay = { path = "../replay" }
-ic-rosetta-api = { path = "../rosetta-api" }
-ic-rosetta-test-utils = { path = "../rosetta-api/test_utils" }
+ic-rosetta-api = { path = "../rosetta-api/icp" }
+ic-rosetta-test-utils = { path = "../rosetta-api/icp/test_utils" }
 ic-sns-governance = { path = "../sns/governance" }
 ic-sns-init = { path = "../sns/init" }
 ic-sns-root = { path = "../sns/root" }
@@ -147,7 +147,7 @@ regex = { workspace = true }
 registry-canister = { path = "../registry/canister" }
 reqwest = { workspace = true }
 ring = { version = "0.17.7", features = ["std"] }
-rosetta-core = { path = "../rosetta-api/rosetta_core" }
+rosetta-core = { path = "../rosetta-api/common/rosetta_core" }
 rsa = { version = "0.9.2", features = ["sha2"] }
 rust_decimal = "1.25"
 schnorr_fun = "0.10"
