--- a/rs/tests/driver/Cargo.toml
+++ b/rs/tests/driver/Cargo.toml
@@ -79,7 +79,7 @@ ic-registry-routing-table = { path = "../../registry/routing_table" }
 ic-registry-subnet-features = { path = "../../registry/subnet_features" }
 ic-registry-subnet-type = { path = "../../registry/subnet_type" }
 ic-registry-transport = { path = "../../registry/transport" }
-ic-rosetta-api = { path = "../../rosetta-api" }
+ic-rosetta-api = { path = "../../rosetta-api/icp" }
 ic-sns-governance = { path = "../../sns/governance" }
 ic-sns-init = { path = "../../sns/init" }
 ic-sns-root = { path = "../../sns/root" }
@@ -122,7 +122,7 @@ regex = { workspace = true }
 registry-canister = { path = "../../registry/canister" }
 reqwest = { workspace = true }
 ring = { version = "0.17.7", features = ["std"] }
-rosetta-core = { path = "../../rosetta-api/rosetta_core" }
+rosetta-core = { path = "../../rosetta-api/common/rosetta_core" }
 rsa = { version = "0.9.2", features = ["sha2"] }
 rust_decimal = "1.25"
 serde = { workspace = true }
