--- a/rs/ledger_suite/icrc1/BUILD.bazel
+++ b/rs/ledger_suite/icrc1/BUILD.bazel
@@ -151,6 +151,7 @@ rust_test(
             "//rs/test_utilities/load_wasm",
             "//rs/types/base_types",
             "@crate_index//:candid",
+            "@crate_index//:lazy_static",
             "@crate_index//:num-traits",
         ],
     )
