--- a/rs/ledger_suite/icrc1/Cargo.toml
+++ b/rs/ledger_suite/icrc1/Cargo.toml
@@ -37,6 +37,7 @@ ic-nns-test-utils-golden-nns-state = { path = "../../nns/test_utils/golden_nns_s
 ic-registry-subnet-type = { path = "../../registry/subnet_type" }
 ic-state-machine-tests = { path = "../../state_machine_tests" }
 ic-test-utilities-load-wasm = { path = "../../test_utilities/load_wasm" }
+lazy_static = { workspace = true }
 leb128 = "0.2.4"
 proptest = { workspace = true }
 rand = { workspace = true }
