--- a/rs/nervous_system/integration_tests/Cargo.toml
+++ b/rs/nervous_system/integration_tests/Cargo.toml
@@ -11,6 +11,7 @@ documentation.workspace = true
 assert_matches = { workspace = true }
 candid = { workspace = true }
 cycles-minting-canister = { path = "../../nns/cmc" }
+futures = { workspace = true }
 ic-base-types = { path = "../../types/base_types" }
 ic-ledger-core = { path = "../../ledger_suite/common/ledger_core" }
 ic-nervous-system-agent = { path = "../agent" }
@@ -33,6 +34,8 @@ pocket-ic = { path = "../../../packages/pocket-ic" }
 prost = { workspace = true }
 rust_decimal = "1.25"
 rust_decimal_macros = "1.25"
+tokio = { workspace = true }
+
 
 # Dependencies required to compile the tests.
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
