--- a/rs/ethereum/ledger-suite-orchestrator/Cargo.toml
+++ b/rs/ethereum/ledger-suite-orchestrator/Cargo.toml
@@ -44,6 +44,7 @@ ic-state-machine-tests = { path = "../../state_machine_tests" }
 maplit = "1"
 mockall = { workspace = true }
 paste = "1.0.12"
+pocket-ic = { path = "../../../packages/pocket-ic" }
 proptest = { workspace = true }
 scraper = "0.17.1"
 tokio = { workspace = true }
