fix(IDX): fix the "Tag Team Reviewers" workflow when run in the private repo
The "Tag Team Reviewers" workflow was failing in the private repo with:

```
+ gh pr edit 39 --add-label @ic-message-routing-owners
GraphQL: Resource not accessible by integration (repository.pullRequest.projectCards.nodes)
```

According to https://github.com/cli/cli/issues/6274 this will be fixed
by adding the `repository-projects: read` permission.

--- a/.github/workflows/ci-pr-only-team-tags.yml
+++ b/.github/workflows/ci-pr-only-team-tags.yml
@@ -15,6 +15,7 @@ on:
 permissions:
   contents: read
   pull-requests: write
+  repository-projects: read
 
 env:
   REPO: "${{ github.repository }}"
