Revert "fix(IDX): add BUILDEVENT_APIKEY back"
This reverts commit f6d21bc3bd4e8c5677ef201b6a3cb25cd03de9f8.

--- a/.github/actions/bazel-test-all/action.yaml
+++ b/.github/actions/bazel-test-all/action.yaml
@@ -19,6 +19,8 @@ inputs:
   BAZEL_STARTUP_ARGS:
     required: false
     default: '--output_base=/var/tmp/bazel-output/'
+  HONEYCOMB_API_TOKEN:
+    required: false
   SSH_PRIVATE_KEY:
     required: false
 
@@ -68,7 +70,5 @@ runs:
           BAZEL_STARTUP_ARGS: ${{ inputs.BAZEL_STARTUP_ARGS }}
           CI_PULL_REQUEST_TARGET_BRANCH_NAME: ${{ github.event.pull_request.base.ref }}
           MERGE_BASE_SHA: ${{ github.event.pull_request.base.sha }}
-          BUILDEVENT_APIKEY: ${{ secrets.HONEYCOMB_API_TOKEN }}
-          BUILDEVENT_DATASET: "github-ci-dfinity"
-          HONEYCOMB_API_TOKEN: ${{ secrets.HONEYCOMB_API_TOKEN }}
+          HONEYCOMB_API_TOKEN: ${{ inputs.HONEYCOMB_API_TOKEN }}
           SSH_PRIVATE_KEY: ${{ inputs.SSH_PRIVATE_KEY }}
