--- a/rs/ethereum/evm-rpc-client/Cargo.toml
+++ b/rs/ethereum/evm-rpc-client/Cargo.toml
@@ -9,6 +9,7 @@ documentation.workspace = true
 [dependencies]
 async-trait = { workspace = true }
 candid = { workspace = true }
+evm_rpc_types = { path = "../evm-rpc-types" }
 ic-canister-log = "0.2.0"
 ic-cdk = { workspace = true }
 serde = { workspace = true }
